src/test/ui/trait-method-private.stderr
error[E0624]: method `method` is private
  --> $DIR/trait-method-private.rs:29:9
   |
29 |     foo.method(); //~ ERROR is private
   |         ^^^^^^
   |
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope, perhaps add a `use` for it:
   |
11 | use inner::Bar;
   |

error: aborting due to previous error

